cmake_minimum_required(VERSION 3.5)
project(HEAP CXX)

# require a C++11 compiler for all targets
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(UNIX)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
endif()

add_executable(heap heap.cpp)
add_executable(stack stack.cpp)
add_executable(understandingrefs refs.cpp)